# tool_zettelgeist

./: pyproject.toml  setup.py  zdb_funcs.sh
scripts/: deploy.sh
src/: main.py
src/classes/: zettel.py
zettelgeist/: zcreate.py  zdb.py  zettel.py  zfind.py  zimport.py  zquery.py  zversion.py
